--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Favorite Cat</title>
 </head>
 <body>
+    <h1>
+        my favorite cat
+    </h1>
     <img src="https://www.google.com/search?q=cat&source=lnms&tbm=isch&sa=X&ved=0ahUKEwiCv6vakNzfAhUBNKwKHYZTDs8Q_AUIDygC&biw=1440&bih=767#imgrc=UynY573QfTtKJM:" alt="cat making face">
 </body>
 </html>
